# musica

./: .gitignore  GUIDE.md  README.md  SETUP.md  TODO.md  TROUBLESHOOTING.md  main.py  musica.ipynb  musica.toml  notebook_helpers.py  pyproject.toml
assets/noises/internet/: manifest.csv
docs/: GUIDE.md  SETUP.md  TROUBLESHOOTING.md  chords.md  musica_v4.pptx  scripts.md
logs/features/: test-0b5ed9a67b4a.npz  test-0c413f8fc7c5.npz  test-1a9655a4982f.npz  train-48dd0d9eb66f.npz  validation-1f5b89cf24cc.npz  validation-bcd8e78f15f6.npz  validation-eed77ca8464f.npz
logs/models/513eb63271bd/: best_model.keras  params.json  training_log.csv
logs/models/6cfc7d555159/: best_model.keras  params.json  training_log.csv
logs/models/bddbd88ac5d1/: best_model.keras  params.json  training_log.csv
src/musica/: __init__.py  chords.py  config.py  logging.py  manifest.py  noise.py  realism.py  transpose.py
src/musica/audio/: __init__.py  chords.py  clean_chords.py  io.py  manifest.py
src/musica/augmentation/: __init__.py  noise.py  realism.py  transpose.py
src/musica/cli/: __init__.py
src/musica/modeling/: __init__.py  augmentation.py  config.py  constants.py  dataset.py  evaluation.py  features.py  prediction.py  preparation.py  training.py  utils.py
src/musica/workflows/: __init__.py  audio_bootstrap.py  training.py
tests/audio/: test_chords.py  test_manifest.py
tests/augmentation/: test_augmentation.py
tests/cli/: test_audio.py
tests/modeling/: test_modeling.py
tests/workflows/: test_audio_bootstrap.py  test_training_pipeline.py
(+7 files in other folders)
