[project]
name = "musica"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.11.0",
    "numpy>=2.0",
    "pretty-midi>=0.2.11",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "soundfile>=0.14",
    "tensorboard>=2.21.0",
    "tensorflow>=2.21.0",
]

[project.scripts]
musica = "musica.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/musica"]
